--- a/LeanCode.Chat.csproj
+++ b/LeanCode.Chat.csproj
@@ -12,12 +12,12 @@
     <PackageReference Include="LeanCode.CQRS.Security" />
     <PackageReference Include="LeanCode.CQRS.Validation.Fluent" />
     <PackageReference Include="LeanCode.DomainModels" />
+    <PackageReference Include="LeanCode.DomainModels.MassTransitRelay" />
     <PackageReference Include="LeanCode.Firebase.FCM" />
     <PackageReference Include="LeanCode.Firebase.Firestore" />
     <PackageReference Include="LeanCode.IdentityProvider" />
     <PackageReference Include="LeanCode.Time" />
     <PackageReference Include="LeanCode.TimeProvider" />
-    <PackageReference Include="MassTransit" />
   </ItemGroup>
 
 </Project>
