Add LeanCode.CodeAnalysis, fix reported problems

--- a/LeanCode.Chat.csproj
+++ b/LeanCode.Chat.csproj
@@ -25,4 +25,8 @@
     <PackageReference Include="LeanCode.TimeProvider" Version="$(CoreLibVersion)" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="LeanCode.CodeAnalysis" Version="$(CoreLibVersion)" PrivateAssets="all" />
+  </ItemGroup>
+
 </Project>
