--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -4,7 +4,11 @@ on:
   push:
     branches:
       - master
+    paths:
+      - 'backend/**'
   pull_request:
+    paths:
+      - 'backend/**'
   workflow_dispatch:
 jobs:
   build:
@@ -17,14 +21,18 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Restore
+        working-directory: ./backend
         run: dotnet restore
       - name: Build
+        working-directory: ./backend
         run: dotnet build --no-restore -c Release
       - name: Pack
         if: github.ref == 'refs/heads/master'
+        working-directory: ./backend
         run: dotnet pack --no-build -c Release
       - name: Push to Feedz
         if: github.ref == 'refs/heads/master'
+        working-directory: ./backend
         run: find bin/Release -maxdepth 1 -name '*.nupkg' -exec dotnet nuget push -k "$FEEDZ_API_KEY" -s 'https://f.feedz.io/leancode/corelibrary/nuget/index.json' -n true '{}' ';'
         env:
           FEEDZ_API_KEY: ${{ secrets.FEEDZ_API_KEY }}
