--- a/.github/workflows/build_mobile.yaml
+++ b/.github/workflows/build_mobile.yaml
@@ -22,13 +22,13 @@ jobs:
     name: flutter build
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    env:
-      FLUTTER_VERSION: "2.10.1"
     steps:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: $
+          flutter-version: '2.8.0'
+          channel: 'stable'
+      - run: flutter --version
       - run: flutter pub get
       - run: flutter analyze
       - run: flutter test
