--- a/.github/workflows/build_mobile.yaml
+++ b/.github/workflows/build_mobile.yaml
@@ -30,5 +30,8 @@ jobs:
           channel: 'stable'
       - run: flutter --version
       - run: flutter pub get
+        working-directory: ./mobile
       - run: flutter analyze
+        working-directory: ./mobile
       - run: flutter test
+        working-directory: ./mobile
