--- a/.github/workflows/build_backend.yaml
+++ b/.github/workflows/build_backend.yaml
@@ -15,6 +15,9 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-20.04
+    defaults:
+      run:
+        working-directory: backend
     env:
       DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
       DOTNET_CLI_TELEMETRY_OPTOUT: 1
@@ -22,18 +25,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Restore
-        working-directory: ./backend
         run: dotnet restore
       - name: Build
-        working-directory: ./backend
         run: dotnet build --no-restore -c Release
       - name: Pack
         if: github.ref == 'refs/heads/master'
-        working-directory: ./backend
         run: dotnet pack --no-build -c Release
       - name: Push to Feedz
         if: github.ref == 'refs/heads/master'
-        working-directory: ./backend
         run: find bin/Release -maxdepth 1 -name '*.nupkg' -exec dotnet nuget push -k "$FEEDZ_API_KEY" -s 'https://f.feedz.io/leancode/corelibrary/nuget/index.json' -n true '{}' ';'
         env:
           FEEDZ_API_KEY: ${{ secrets.FEEDZ_API_KEY }}
