--- a/.github/workflows/build_mobile.yaml
+++ b/.github/workflows/build_mobile.yaml
@@ -22,6 +22,9 @@ jobs:
     name: flutter build
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: mobile
     steps:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v2
@@ -30,8 +33,5 @@ jobs:
           channel: 'stable'
       - run: flutter --version
       - run: flutter pub get
-        working-directory: ./mobile
       - run: flutter analyze
-        working-directory: ./mobile
       - run: flutter test
-        working-directory: ./mobile
