--- a/backend/LeanCode.Chat.csproj
+++ b/backend/LeanCode.Chat.csproj
@@ -1,13 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net10.0</TargetFramework>
     <OutputType>Library</OutputType>
     <Deterministic>true</Deterministic>
     <Nullable>enable</Nullable>
     <DebugType>embedded</DebugType>
 
-    <CoreLibVersion>6.0.1558</CoreLibVersion>
+    <CoreLibVersion>10.0.2709-preview</CoreLibVersion>
 
     <Company>LeanCode</Company>
     <RepositoryUrl>https://github.com/leancodepl/chat</RepositoryUrl>
@@ -27,13 +27,13 @@
 
   <ItemGroup>
     <PackageReference Include="LeanCode.Components" Version="$(CoreLibVersion)" />
-    <PackageReference Include="LeanCode.CQRS" Version="$(CoreLibVersion)" />
-    <PackageReference Include="LeanCode.CQRS.Cache" Version="$(CoreLibVersion)" />
+    <PackageReference Include="LeanCode.CQRS" Version="6.1.1603" />
+    <PackageReference Include="LeanCode.CQRS.Cache" Version="7.0.1636" />
     <PackageReference Include="LeanCode.CQRS.Execution" Version="$(CoreLibVersion)" />
     <PackageReference Include="LeanCode.CQRS.Security" Version="$(CoreLibVersion)" />
     <PackageReference Include="LeanCode.CQRS.Validation.Fluent" Version="$(CoreLibVersion)" />
     <PackageReference Include="LeanCode.DomainModels" Version="$(CoreLibVersion)" />
-    <PackageReference Include="LeanCode.DomainModels.MassTransitRelay" Version="$(CoreLibVersion)" />
+    <PackageReference Include="LeanCode.DomainModels.MassTransitRelay" Version="7.0.1785" />
     <PackageReference Include="LeanCode.Firebase.FCM" Version="$(CoreLibVersion)" />
     <PackageReference Include="LeanCode.Firebase.Firestore" Version="$(CoreLibVersion)" />
     <PackageReference Include="LeanCode.TimeProvider" Version="$(CoreLibVersion)" />
