--- a/backend/LeanCode.Chat.csproj
+++ b/backend/LeanCode.Chat.csproj
@@ -28,12 +28,11 @@
   <ItemGroup>
     <PackageReference Include="LeanCode.Components" Version="$(CoreLibVersion)" />
     <PackageReference Include="LeanCode.Contracts" Version="2.0.0" />
-    <PackageReference Include="LeanCode.CQRS.Cache" Version="7.0.1636" />
     <PackageReference Include="LeanCode.CQRS.Execution" Version="$(CoreLibVersion)" />
     <PackageReference Include="LeanCode.CQRS.Security" Version="$(CoreLibVersion)" />
     <PackageReference Include="LeanCode.CQRS.Validation.Fluent" Version="$(CoreLibVersion)" />
     <PackageReference Include="LeanCode.DomainModels" Version="$(CoreLibVersion)" />
-    <PackageReference Include="LeanCode.DomainModels.MassTransitRelay" Version="7.0.1785" />
+    <PackageReference Include="LeanCode.CQRS.MassTransitRelay" Version="$(CoreLibVersion)" />
     <PackageReference Include="LeanCode.Firebase.FCM" Version="$(CoreLibVersion)" />
     <PackageReference Include="LeanCode.Firebase.Firestore" Version="$(CoreLibVersion)" />
     <PackageReference Include="LeanCode.UserIdExtractors" Version="$(CoreLibVersion)" />
