Fix NuGet config

--- a/backend/NuGet.config
+++ b/backend/NuGet.config
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <packageSources>
-    <add key="Feedz" value="https://f.feedz.io/leancode/public/nuget/index.json" />
-  </packageSources>
+    <packageSources>
+        <clear />
+        <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
+        <add key="feedz-leancode-public" value="https://f.feedz.io/leancode/public/nuget/index.json" />
+    </packageSources>
+    <packageSourceMapping>
+        <packageSource key="nuget.org">
+            <package pattern="*" />
+            <package pattern="LeanCode.Contracts" />
+        </packageSource>
+        <packageSource key="feedz-leancode-public">
+            <package pattern="LeanCode.*" />
+        </packageSource>
+    </packageSourceMapping>
 </configuration>
