--- a/.github/workflows/build_backend.yaml
+++ b/.github/workflows/build_backend.yaml
@@ -32,16 +32,16 @@ jobs:
       - name: Pack Chat Contracts
         if: ${{ github.ref == 'refs/heads/master' || contains(github.ref, 'refs/heads/v') }}
         run: dotnet pack --no-build -c Release
-        working-directory: ./backend/src/LeanCode.Chat.Contracts
+        working-directory: ./backend/LeanCode.Chat.Contracts
       - name: Pack Chat
         if: ${{ github.ref == 'refs/heads/master' || contains(github.ref, 'refs/heads/v') }}
         run: dotnet pack --no-build -c Release
-        working-directory: ./backend/src/LeanCode.Chat
+        working-directory: ./backend/LeanCode.Chat
       - name: Push to Feedz
         if: ${{ github.ref == 'refs/heads/master' || contains(github.ref, 'refs/heads/v') }}
         run: dotnet nuget push \
-          "src/LeanCode.Chat.Contracts/bin/Release/LeanCode.Chat.Contracts.*.nupkg" \
-          "src/LeanCode.Chat/bin/Release/LeanCode.Chat.*.nupkg" \
+          "LeanCode.Chat.Contracts/bin/Release/LeanCode.Chat.Contracts.*.nupkg" \
+          "LeanCode.Chat/bin/Release/LeanCode.Chat.*.nupkg" \
           -k "$FEEDZ_API_KEY" \
           -s 'https://f.feedz.io/leancode/public/nuget/index.json' \
           -n
