--- a/mobile/android/build.gradle
+++ b/mobile/android/build.gradle
@@ -25,6 +25,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
+    namespace 'pl.leancode.leancode_chat_client'
     compileSdkVersion 31
 
     sourceSets {
@@ -32,6 +33,13 @@ android {
     }
     defaultConfig {
         minSdkVersion 21
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = '1.8'
     }
     lintOptions {
         disable 'InvalidPackage'
