--- a/mobile/contracts_generator.yaml
+++ b/mobile/contracts_generator.yaml
@@ -1,17 +1,8 @@
 # Possible input methods, specify exactly one (required)
 input:
   # Array of paths pointing to .csproj contracts project files
-  path:
-    # List of glob paths specifying which files should be included (required)
-    include:
-      - "**.cs"
-      - ../ChatRoles.cs
-    # List of glob paths specifying which files should be excluded
-    exclude:
-      - Notifications/*
-    # The base directory used for globbing
-    # WARNING: this does not actually exist, It should be locally cloned
-    directory: ../chat/LeanCode.Chat.Contracts
+  project:
+    - ../backend/LeanCode.Chat.Contracts/LeanCode.Chat.Contracts.csproj
 # Name of the output dart file
 name: contracts
 # Regex to filter-in namespaced statements
