--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -4,37 +4,40 @@ version: 1.0.0
 publish_to: "none"
 
 environment:
-  sdk: ">=2.15.0 <3.0.0"
-  flutter: ">=2.8.0 <3.0.0"
+  sdk: ">=3.8.1 <4.0.0"
+  flutter: ">=3.32.2"
 
 dependencies:
-  clock: ^1.1.0
-  cloud_firestore: ^3.1.5
-  cqrs: ^6.1.0
-  equatable: ^2.0.3
-  firebase_auth: ^3.1.3
-  firebase_core: ^1.7.0
+  clock: ^1.1.2
+  cloud_firestore: ^5.5.0
+  collection: ^1.19.1
+  cqrs: ^10.0.2
+  equatable: ^2.0.7
+  firebase_auth: ^5.3.4
+  firebase_core: ^3.13.1
   flutter:
     sdk: flutter
-  flutter_bloc: ^8.0.0-dev.1
-  flutter_hooks: ^0.18.0
-  freezed_annotation: ^1.0.0
-  http: ^0.13.4
-  json_annotation: ^4.4.0
-  logging: ^1.0.2
-  rxdart: ^0.27.2
+  flutter_bloc: ^9.1.1
+  flutter_hooks: ^0.20.5
+  freezed_annotation: ^3.0.0
+  http: ^1.4.0
+  intl: ^0.20.2
+  json_annotation: ^4.9.0
+  leancode_contracts: ^0.8.0
+  logging: ^1.3.0
+  rxdart: ^0.28.0
 
 dev_dependencies:
-  bloc_test: ^9.0.0-dev.2
-  build_runner: ^2.1.4
-  contracts_generator: ^0.4.2
+  bloc_test: ^10.0.0
+  build_runner: ^2.4.15
   flutter_test:
     sdk: flutter
-  freezed: ^1.0.0
-  json_serializable: ^6.1.3
-  leancode_lint: ^1.0.2
-  mocktail: ^0.2.0
-  test: ^1.17.10
+  freezed: ^3.2.3
+  json_serializable: ^6.9.5
+  leancode_contracts_generator: ^0.17.0
+  leancode_lint: ^17.0.0
+  mocktail: ^1.0.4
+  test: ^1.25.8
 
 flutter:
   plugin:
