--- a/backend/LeanCode.Chat.Contracts/LeanCode.Chat.Contracts.csproj
+++ b/backend/LeanCode.Chat.Contracts/LeanCode.Chat.Contracts.csproj
@@ -1,4 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
+  <PropertyGroup>
+    <Nullable>annotations</Nullable>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="LeanCode.Contracts" />
   </ItemGroup>
